# workflow-runner-py

./: README.md  USAGE.md  pyproject.toml  run_tests.py
tests/: test_validators.py  test_workflow_runner.py
tests/data/: bad.csv  good.csv
tests/sample_schema/: workflow_schema.json
workflow_runner_py/: __init__.py  validators.py  workflow_runner.py
workflow_runner_py/models/: workflow_schema.py
